--- a/style.css
+++ b/style.css
@@ -1,44 +1,60 @@
-
-*{
+* {
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
 }
 
-.container{
-    height:100vh;
+.container {
+    height: 100vh;
     width: 100vw;
     background-color: rgb(237, 232, 232);
-    image-rendering: auto;
-    
+    background-image: url(2.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 
-.container1{
-    height:100vh;
+.container1 {
+    height: 100vh;
     width: 100vw;
     background-color: rgb(220, 163, 163);
 }
 
-.container2{
-    height:100vh;
+.container2 {
+    height: 100vh;
     width: 100vw;
     background-color: rgb(76, 92, 80);
 }
-nav{
+
+nav {
     width: 100vw;
     height: 30px;
+    color: white;
+
 
 }
 
-nav a{
+nav a {
     display: inline;
     float: right;
     padding-right: 3%;
     padding-top: 1%;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    margin: auto;
 
 }
-nav h1{
+
+nav h1 {
     margin-left: 2%;
     padding: 1%;
 }
 
+img {
+    width: 100vw;
+    height: 100vh;
+}
+
+nav a:hover {
+   size: 110px; 
+}
